[package]
name = "pingkeeper"
description = """
Command line application that monitors network (direct connection or ping) and, in case of failure, runs a command. Optionally it can monitor that the command is permanently running and restart it if network is unreachable.
"""
version = "3.0.0"
authors = ["Ignacio Lago <ignacio@ignaciolago.com>"]
edition = "2018"
readme = "README.md"
license = "GPL-3.0-or-later"
homepage = "https://github.com/ignlg/pingkeeper"
repository = "https://github.com/ignlg/pingkeeper"
keywords = [
  "launcher",
  "daemon",
  "openvpn",
  "vpn",
  "network",
  "monitoring",
  "ping",
  "macos",
  "unix",
  "unix-shell",
  "unix-command",
  "linux",
  "launch-daemon",
  "shell",
]

[dependencies]
structopt = "0.3"
pipeliner = "1.0"
rand = "0.7"
nix = "0.17"

[profile.release]
debug = false
lto = true
